--- a/JHPhotoDemo/JHPhotoDemo/Base.lproj/Main.storyboard
+++ b/JHPhotoDemo/JHPhotoDemo/Base.lproj/Main.storyboard
@@ -38,18 +38,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cI4-TW-ilB">
-                                <rect key="frame" x="152" y="316.5" width="70" height="33"/>
+                                <rect key="frame" x="144" y="316.5" width="87" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="进入相册"/>
+                                <state key="normal" title="JHPhotoKit"/>
                                 <connections>
                                     <action selector="enterAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J9T-zN-SKx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OwR-8a-rbH">
+                                <rect key="frame" x="138" y="379.5" width="99" height="30"/>
+                                <state key="normal" title="UIImagePicker"/>
+                                <connections>
+                                    <action selector="pickerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0dZ-lv-Zbp"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cI4-TW-ilB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5rM-QM-MK6"/>
+                            <constraint firstItem="OwR-8a-rbH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VGy-N4-Tbf"/>
                             <constraint firstItem="cI4-TW-ilB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="du9-kE-xYr"/>
+                            <constraint firstItem="OwR-8a-rbH" firstAttribute="top" secondItem="cI4-TW-ilB" secondAttribute="bottom" constant="30" id="nL4-Iu-ePL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="biB-lS-HGy"/>
